<resources>
    <string name="app_name">Send Meal</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="repcontraseña">Repetir Contraseña</string>
    <string name="email">Email</string>
    <string name="tipotarjeta">Tipo de tarjeta:</string>
    <string name="Debito">Debito</string>
    <string name="Credito">Crédito</string>
    <string name="Numerodetar">Numero de tarjeta</string>
    <string name="CCV">CCV</string>
    <string name="FechaVencimiento">Fecha vencimiento</string>
    <string name="CBU">CBU</string>
    <string name="Alias">Alias CBU</string>
    <string name="Cargapre">Realizar carga inicial?</string>
    <string name="AceptoTermino">Acepto los terminos y condiciones</string>
    <string name="Registrar">Registrar</string>
    <string name="crearPlato">Crear plato</string>

    <string name="start">0</string>
    <string name="stop">1500</string>
    <string name="MenuBienv">Menú SendMeal</string>
    <string name="NuevoPlato">Nuevo Plato</string>
    <string name="ListaPlatos">Lista Platos</string>
    <string name="tituloPlato">Título del plato</string>
    <string name="descripcionPlato">Descripción</string>
    <string name="precioPlato">Precio</string>
    <string name="caloriasPlato">Calorias</string>
    <string name="guardarPlato">Guardar</string>
    <string name="NuevoPedido">Nuevo Pedido</string>
    <string name="Informacion">Información</string>
    <string name="tipoPedido">¿Lo enviamos o retiras en el lugar?</string>
    <string name="direccion">Dirección</string>
    <string name="altura">Altura</string>
    <string name="casa">Casa</string>
    <string name="departamento">Departamento</string>
    <string name="piso">Piso</string>
    <string name="dondeEnviamos">¿A dónde lo enviamos?</string>
    <string name="encargarPlatos">Seleccionar Platos</string>
    <string name="realizarPedido">Realizar pedido</string>
    <string name="envioDomicilio">Envio a domicilio</string>
    <string name="takeAway">Take Away</string>
    <string name="Seleccionar">Seleccionar</string>
    <string name="montoTotal">El monto total es: </string>
    <string name="FinalizarPedido">FINALIZAR PEDIDO</string>

    <string-array name="mes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="anio">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>

</resources>