<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_Registrar"
            android:title="@string/Registrar"
            android:icon="@drawable/registro"
            />
        <item
            android:id="@+id/menu_nuevoPlato"
            android:title="@string/NuevoPlato"
            android:icon="@drawable/ic_mas"
            />
        <item
            android:title="@string/ListaPlatos"
            android:id="@+id/menu_ListaPlatos"
            android:icon="@drawable/nuevoplat"
            />
        <item
            android:title="@string/NuevoPedido"
            android:id="@+id/menu_pedido"
            android:icon="@drawable/ic_pedido"
            />

        <item
            android:title="Información"
            android:id="@+id/menu_informacion"
            android:icon="@android:drawable/ic_dialog_info"
            />
        <item
            android:title="Buscar platos en BD"
            android:id="@+id/platos_BD"
            android:icon="@android:drawable/ic_dialog_info"
            />
    </group>
</menu>