<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <EditText
        android:layout_marginTop="@dimen/topDescripcionPlato"
        android:id="@+id/ETtituloPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tituloPlato"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/ETdescripcionPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcionPlato"
        android:inputType="textPersonName"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ETPrecioPlato"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:hint="@string/precioPlato"
            android:inputType="number"
            android:maxLength="18" />

        <EditText
            android:id="@+id/ETcaloriasPlato"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:hint="@string/caloriasPlato"
            android:inputType="number"
            android:maxLength="3" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardarPlato"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:shadowRadius="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/guardarPlato" />

</LinearLayout>